feat: add comprehensive About page with legal rights detection; add nav to About; create design prompts doc

--- a/services/landing/public/index.html
+++ b/services/landing/public/index.html
@@ -296,9 +296,18 @@
 <body>
   <header>
     <div class="container">
-      <div class="logo">TiltCheck</div>
-      <p class="tagline">The Degen Transparency Layer</p>
-      <a href="https://discord.gg/s6NNfPHxMS" class="cta-button">Join Discord →</a>
+      <nav style="display: flex; justify-content: space-between; align-items: center; max-width: 1200px; margin: 0 auto;">
+        <div class="logo">TiltCheck</div>
+        <div style="display: flex; gap: 25px; align-items: center;">
+          <a href="/#tools" style="color: #aaa; text-decoration: none;">Tools</a>
+          <a href="/about.html" style="color: #aaa; text-decoration: none;">About</a>
+          <a href="/dashboard" style="color: #aaa; text-decoration: none;">Dashboard</a>
+          <a href="https://discord.gg/s6NNfPHxMS" style="background: #00d4aa; color: #0a0a0a; padding: 8px 20px; border-radius: 6px; font-weight: 600; text-decoration: none;">Join Discord</a>
+        </div>
+      </nav>
+      <div style="text-align: center; margin-top: 30px;">
+        <p class="tagline">The Degen Transparency Layer</p>
+      </div>
     </div>
   </header>
 
@@ -441,6 +450,9 @@
   <footer>
     <div class="container">
       <p>
+        <a href="/">Home</a> •
+        <a href="/#tools">All Tools</a> •
+        <a href="/about.html">About</a> •
         <a href="https://discord.gg/s6NNfPHxMS">Discord</a> •
         <a href="https://github.com/jmenichole/tiltcheck-monorepo">GitHub</a> •
         <a href="/dashboard">Trust Dashboard</a>
