feat: Add landing page enhancements (newsletter, testimonials, search, FAQ, etc)
- Add 11 new marketing/content pages
- Implement breadcrumbs navigation
- Add FAQ with accordion and JSON-LD schema
- Create HTML + XML sitemaps
- Implement search with lunr.js
- Add newsletter subscribe/unsubscribe with hashed emails
- Create press kit and testimonials pages
- Add Redis-backed rate limiter
- Update meta builder and sitemap generator

--- a/services/landing/public/about.html
+++ b/services/landing/public/about.html
@@ -108,6 +108,7 @@
   </style>
 </head>
 <body>
+  <nav class="breadcrumbs"></nav>
   <nav class="navbar">
     <div class="container">
       <a href="/" class="logo">TiltCheck</a>
@@ -427,4 +428,5 @@
     </div>
   </footer>
 </body>
+<script src="/breadcrumbs.js" defer></script>
 </html>
