--- a/services/game-arena/public/profile.html
+++ b/services/game-arena/public/profile.html
@@ -105,6 +105,32 @@
         </div>
       </section>
 
+      <!-- JustTheTip History Section -->
+      <section class="profile-section tip-history-section">
+        <h3>💰 JustTheTip History</h3>
+        <div class="tip-stats-row" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 16px; margin-bottom: 20px;">
+          <div class="stats-card">
+            <div class="stat-label">Total Sent</div>
+            <div class="stat-value" id="tip-total-sent">0 SOL</div>
+          </div>
+          <div class="stats-card">
+            <div class="stat-label">Total Received</div>
+            <div class="stat-value" id="tip-total-received">0 SOL</div>
+          </div>
+          <div class="stats-card">
+            <div class="stat-label">Tips Sent</div>
+            <div class="stat-value" id="tip-count-sent">0</div>
+          </div>
+          <div class="stats-card">
+            <div class="stat-label">Tips Received</div>
+            <div class="stat-value" id="tip-count-received">0</div>
+          </div>
+        </div>
+        <div id="tip-history-list" class="game-history-list">
+          <div class="loading">Loading tip history...</div>
+        </div>
+      </section>
+
       <!-- Achievements Section -->
       <section class="profile-section achievements-section">
         <h3>🏆 Achievements</h3>
