Landing pages: switch to shared components loader, auth sequencing; add <picture> fallbacks across key pages; remove duplicate nav/footer blocks

--- a/services/landing/public/about.html
+++ b/services/landing/public/about.html
@@ -109,6 +109,7 @@
 </head>
 <body>
   <nav class="breadcrumbs"></nav>
+  <div id="shared-nav"></div>
   <nav class="navbar">
     <div class="container">
       <a href="/" class="logo">TiltCheck</a>
@@ -405,6 +406,7 @@
     </div>
   </section>
 
+  <div id="shared-footer"></div>
   <footer>
     <div class="container">
       <p>
@@ -435,5 +437,6 @@
   </footer>
 </body>
 <script src="/breadcrumbs.js" defer></script>
+<script src="/scripts/components-loader.js"></script>
 <script src="/scripts/auth.js"></script>
 </html>
