--- a/services/landing/public/casino-reviews.html
+++ b/services/landing/public/casino-reviews.html
@@ -7,7 +7,11 @@
   <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
+  <div id="shared-nav"></div>
   <h1>Casino Reviews</h1>
   <p>Read and submit reviews for casinos in the TiltCheck ecosystem. Share your experiences and help others make informed choices.</p>
 </body>
+<div id="shared-footer"></div>
+<script src="/scripts/components-loader.js"></script>
+<script src="/scripts/auth.js"></script>
 </html>
