--- a/services/landing/public/tools/justthetip.html
+++ b/services/landing/public/tools/justthetip.html
@@ -8,16 +8,7 @@
   <link rel="stylesheet" href="../styles/tool-page.css">
 </head>
 <body>
-  <nav class="navbar">
-    <div class="container">
-      <a href="/" class="logo">TiltCheck</a>
-      <div class="nav-links">
-        <a href="/#tools">Tools</a>
-        <a href="/dashboard">Dashboard</a>
-        <a href="https://discord.gg/s6NNfPHxMS" class="cta-small">Join Discord</a>
-      </div>
-    </div>
-  </nav>
+  <div id="shared-nav"></div>
 
   <header class="tool-header">
     <div class="container">
@@ -287,21 +278,7 @@
     </div>
   </section>
 
-  <footer>
-    <div class="container">
-      <p>
-        <a href="/">Home</a> •
-        <a href="/#tools">All Tools</a> •
-        <a href="https://discord.gg/tiltcheck">Discord</a> •
-        <a href="https://github.com/jmenichole/tiltcheck-monorepo">GitHub</a>
-      </p>
-      <p class="built-by">
-        <a href="https://jmenichole.github.io/Portfolio/" target="_blank" rel="noopener">made for degens by degens</a>
-      </p>
-      <p class="built-by">
-        Built by <a href="https://github.com/jmenichole">jmenichole</a> • TiltCheck Ecosystem © 2024–2025
-      </p>
-    </div>
-  </footer>
+  <div id="shared-footer"></div>
 </body>
+<script src="/scripts/components-loader.js"></script>
 </html>
