--- a/services/landing/public/help.html
+++ b/services/landing/public/help.html
@@ -9,5 +9,13 @@
 <body>
   <h1>TiltCheck Help Center</h1>
   <p>Need help? Browse FAQs, troubleshooting guides, and contact support. Our team is here to help you use TiltCheck safely and effectively.</p>
+  <div id="shared-nav"></div>
+  <nav class="navbar">
+  <div id="shared-footer"></div>
+  <footer class="site-footer">
+  </footer>
+  </nav>
 </body>
+<script src="/scripts/components-loader.js"></script>
+<script src="/scripts/auth.js"></script>
 </html>
