--- a/services/landing/public/scam-reports.html
+++ b/services/landing/public/scam-reports.html
@@ -7,7 +7,11 @@
   <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
+  <div id="shared-nav"></div>
   <h1>Scam Reports</h1>
   <p>Report scams, view flagged sites, and help keep the community safe. TiltCheck maintains a public blacklist for transparency.</p>
 </body>
+<div id="shared-footer"></div>
+<script src="/scripts/components-loader.js"></script>
+<script src="/scripts/auth.js"></script>
 </html>
