--- a/services/landing/public/terms.html
+++ b/services/landing/public/terms.html
@@ -12,6 +12,7 @@
   <meta name="theme-color" content="#7c3aed">
 </head>
 <body>
+  <div id="shared-nav"></div>
   <nav class="breadcrumbs"></nav>
   <header class="site-header">
     <nav class="container">
@@ -285,6 +286,15 @@
       </div>
     </div>
   </footer>
+  <div id="shared-footer"></div>
+  <script>
+    (function(){
+      const navMount = document.getElementById('shared-nav');
+      const footerMount = document.getElementById('shared-footer');
+      if (navMount) { fetch('/components/nav.html').then(r=>r.text()).then(html=>{ navMount.innerHTML = html; }).catch(()=>{}); }
+      if (footerMount) { fetch('/components/footer.html').then(r=>r.text()).then(html=>{ footerMount.innerHTML = html; }).catch(()=>{}); }
+    })();
+  </script>
 </body>
 <script src="/breadcrumbs.js" defer></script>
 </html>
