--- a/services/landing/public/tools/tiltcheck-core.html
+++ b/services/landing/public/tools/tiltcheck-core.html
@@ -8,25 +8,14 @@
   <link rel="stylesheet" href="../styles/tool-page.css" />
 </head>
 <body>
-  <nav class="navbar">
-    <div class="container">
-      <a href="/" class="logo">TiltCheck</a>
-      <div class="nav-links">
-        <a href="/#tools">Tools</a>
-        <a href="/dashboard">Dashboard</a>
-        <a href="https://discord.gg/s6NNfPHxMS" class="cta-small">Join Discord</a>
-      </div>
-    </div>
-  </nav>
+  <div id="shared-nav"></div>
 
   <header class="tool-header">
     <div class="container">
       <div class="tool-icon-large">🧠</div>
       <h1>TiltCheck Core</h1>
       <p class="tool-tagline">Cool-down & pattern intelligence without judgment</p>
-      <p class="built-by">
-        <a href="https://jmenichole.github.io/Portfolio/" target="_blank" rel="noopener">made for degens by degens</a>
-      </p>
+      
       <span class="status-badge status-beta">Beta</span>
     </div>
   </header>
@@ -116,11 +105,7 @@
     </div>
   </section>
 
-  <footer>
-    <div class="container">
-      <p><a href="/">Home</a> • <a href="/#tools">All Tools</a> • <a href="https://discord.gg/tiltcheck">Discord</a> • <a href="https://github.com/jmenichole/tiltcheck-monorepo">GitHub</a></p>
-      <p class="built-by">Built by <a href="https://github.com/jmenichole">jmenichole</a> • TiltCheck © 2024–2025</p>
-    </div>
-  </footer>
+  <div id="shared-footer"></div>
 </body>
+<script src="/scripts/components-loader.js"></script>
 </html>
