--- a/services/landing/public/trust-scores.html
+++ b/services/landing/public/trust-scores.html
@@ -12,6 +12,7 @@
   </style>
 </head>
 <body>
+  <div id="shared-nav"></div>
   <h1>Casino Trust Score Grades</h1>
   <p>This page displays the latest trust scores for casinos, updated automatically from the TiltCheck trust engine.</p>
   <div id="trust-scores">
@@ -46,4 +47,13 @@
       });
   </script>
 </body>
+<div id="shared-footer"></div>
+<script>
+  (function(){
+    const navMount = document.getElementById('shared-nav');
+    const footerMount = document.getElementById('shared-footer');
+    if (navMount) { fetch('/components/nav.html').then(r=>r.text()).then(html=>{ navMount.innerHTML = html; }).catch(()=>{}); }
+    if (footerMount) { fetch('/components/footer.html').then(r=>r.text()).then(html=>{ footerMount.innerHTML = html; }).catch(()=>{}); }
+  })();
+</script>
 </html>
