--- a/frontend/public/press-kit.html
+++ b/frontend/public/press-kit.html
@@ -37,11 +37,19 @@
     <h2>Logos</h2>
     <div class="asset-grid" aria-label="Logo download options">
       <div class="asset-item">
-        <img src="/assets/logo/tiltcheck-logo-dark.png" alt="TiltCheck logo dark" style="width:100%;height:auto" />
+        <picture>
+          <source srcset="/assets/logo/tiltcheck-logo-dark.avif" type="image/avif">
+          <source srcset="/assets/logo/tiltcheck-logo-dark.webp" type="image/webp">
+          <img src="/assets/logo/tiltcheck-logo-dark.png" alt="TiltCheck logo dark" style="width:100%;height:auto" />
+        </picture>
         <p><a download href="/assets/logo/tiltcheck-logo-dark.png">PNG (Dark)</a></p>
       </div>
       <div class="asset-item">
-        <img src="/assets/logo/tiltcheck-logo-light.png" alt="TiltCheck logo light" style="width:100%;height:auto" />
+        <picture>
+          <source srcset="/assets/logo/tiltcheck-logo-light.avif" type="image/avif">
+          <source srcset="/assets/logo/tiltcheck-logo-light.webp" type="image/webp">
+          <img src="/assets/logo/tiltcheck-logo-light.png" alt="TiltCheck logo light" style="width:100%;height:auto" />
+        </picture>
         <p><a download href="/assets/logo/tiltcheck-logo-light.png">PNG (Light)</a></p>
       </div>
       <div class="asset-item">
